--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,10 @@
          <a href="https://ai4earthscience.github.io/iclr-2022-workshop/" class="btn">Home</a>
         <a href="https://ai4earthscience.github.io/iclr-2022-workshop/organizers.html" class="btn">Organizers</a>
         <a href="https://ai4earthscience.github.io/iclr-2022-workshop/past_events.html" class="btn">Past Events</a>
+        <a href="https://ai4earthscience.github.io/iclr-2022-workshop/#important-dates" class="btn">Call for Papers</a>
+        <a href="https://ai4earthscience.github.io/iclr-2022-workshop/#tenative-schedule" class="btn">Call for Schedule</a>
+        <a href="https://ai4earthscience.github.io/iclr-2022-workshop/invited.html" class="btn">Invited Speakers</a>
+      
     </header>
     
     
