--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <h2 class="project-tagline">{{"#ai4earth at virtual @ICLR2022 April 29" }}</h2>
          <a href="https://ai4earthscience.github.io/iclr-2022-workshop/" class="btn">Home</a> 
         <a href="https://ai4earthscience.github.io/iclr-2022-workshop/#submission-instructions" class="btn">Call for Papers</a>
-        <a href="https://ai4earthscience.github.io/iclr-2022-workshop/#tenative-schedule" class="btn">Schedule</a>
+        <a href="https://ai4earthscience.github.io/iclr-2022-workshop/#important-dates" class="btn">Schedule</a>
         <a href="https://ai4earthscience.github.io/iclr-2022-workshop/invited.html" class="btn">Invited Speakers</a>
         <a href="https://ai4earthscience.github.io/iclr-2022-workshop/organizers.html" class="btn">Organizers</a>
         <a href="https://ai4earthscience.github.io/iclr-2022-workshop/past_events.html" class="btn">Past Events</a>
