--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 </p> <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{"#ai4earth at virtual @ICLR2022 April 29" }}</h2>
          <a href="https://ai4earthscience.github.io/iclr-2022-workshop/" class="btn">Home</a> 
-        <a href="https://ai4earthscience.github.io/iclr-2022-workshop/schedule.html" class="btn">Schedule</a>
+        <a href="https://ai4earthscience.github.io/iclr-2022-workshop/schedule" class="btn">Schedule</a>
         <a href="https://ai4earthscience.github.io/iclr-2022-workshop/invited.html" class="btn">Invited Speakers</a>
         <a href="https://ai4earthscience.github.io/iclr-2022-workshop/organizers.html" class="btn">Organizers</a>
         <a href="https://ai4earthscience.github.io/iclr-2022-workshop/past_events.html" class="btn">Past Events</a>
